--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <spring.version>6.1.13</spring.version>
+    <spring.version>5.3.23</spring.version>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -47,13 +49,27 @@
 
     <dependency>
       <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf-spring6</artifactId>
+      <artifactId>thymeleaf-spring5</artifactId>
       <version>3.1.2.RELEASE</version>
     </dependency>
+
 
   </dependencies>
 
   <build>
     <finalName>mvc-project</finalName>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
+
   </build>
 </project>
